--- a/aula03/package.json
+++ b/aula03/package.json
@@ -1,4 +1,7 @@
 {
+  
+"json.validate.enable": false,
+  "$schema": "https://json.schemastore.org/package",
   "name": "aula03",
   "version": "1.0.0",
   "main": "index.js",
@@ -17,7 +20,10 @@
     "firebase": "^11.6.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-dotenv": "^3.4.11"
+    "react-native-dotenv": "^3.4.11",
+    "react-dom": "18.3.1",
+    "react-native-web": "~0.19.13",
+    "@expo/metro-runtime": "~4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
