--- a/aula03/package.json
+++ b/aula03/package.json
@@ -1,6 +1,5 @@
 {
-  
-"json.validate.enable": false,
+  "json.validate.enable": false,
   "$schema": "https://json.schemastore.org/package",
   "name": "aula03",
   "version": "1.0.0",
@@ -12,18 +11,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
+    "@expo/ngrok": "^4.1.3",
     "@react-navigation/bottom-tabs": "^7.3.1",
     "@react-navigation/native": "^7.0.17",
     "@react-navigation/native-stack": "^7.3.1",
-    "expo": "~52.0.40",
-    "expo-status-bar": "~2.0.1",
+    "expo": "^53.0.10",
+    "expo-status-bar": "~2.2.3",
     "firebase": "^11.6.0",
-    "react": "18.3.1",
-    "react-native": "0.76.7",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.3",
     "react-native-dotenv": "^3.4.11",
-    "react-dom": "18.3.1",
-    "react-native-web": "~0.19.13",
-    "@expo/metro-runtime": "~4.0.1"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
