--- a/aula03/package.json
+++ b/aula03/package.json
@@ -1,1 +1,31 @@
-{"json.validate.enable":false,"$schema":"https://json.schemastore.org/package","name":"aula03","version":"1.0.0","main":"index.js","scripts":{"start":"expo start","android":"expo start --android","ios":"expo start --ios","web":"expo start --web"},"dependencies":{"@expo/metro-runtime":"~4.0.1","@react-navigation/bottom-tabs":"^7.3.1","@react-navigation/native":"^7.0.17","@react-navigation/native-stack":"^7.3.1","expo":"~53.0.10","expo-status-bar":"~2.2.3","firebase":"^11.9.0","react":"18.3.1","react-dom":"18.3.1","react-native":"0.76.7","react-native-dotenv":"^3.4.11","react-native-web":"~0.19.13"},"devDependencies":{"@babel/core":"^7.20.0"},"private":true}
+{
+  "json.validate.enable": false,
+  "$schema": "https://json.schemastore.org/package",
+  "name": "aula03",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
+  },
+  "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
+    "@react-navigation/bottom-tabs": "^7.3.1",
+    "@react-navigation/native": "^7.0.17",
+    "@react-navigation/native-stack": "^7.3.1",
+    "expo": "~53.0.0",
+    "expo-status-bar": "~2.2.3",
+    "firebase": "^11.9.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.3",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-web": "^0.20.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0"
+  },
+  "private": true
+}
